--- a/files/wsm/info.ini
+++ b/files/wsm/info.ini
@@ -2,4 +2,4 @@ author = "Jeff Tham"
 github = "https://github.com/jefftham/wsm"
 homepage ="https://github.com/jefftham/wsm"
 description = "WebSocket Manager - A better way to handle WebSocket connection for both Client-side and Server-side"
-mainfile = "wsm.js"
+mainfile = "wsm.min.js"
